--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
     </audio>
     <audio controls>
         <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-        Your browser does not support t
+        Your browser does not support the audio element.
     </audio>
     <script type="text/javascript" src="./script.js">
 </script>
